架构第一次确认

--- a/docs/v1/架构.md
+++ b/docs/v1/架构.md
@@ -1,145 +1,100 @@
 project/
 │
-├── app/                                # 应用主目录（核心业务逻辑）
-│   ├── __init__.py                     # FastAPI app 初始化位置（可选封装 create_app）
-
-│   ├── api/                            # 接口路由层（API 层，控制器）
-│   │   ├── __init__.py                 # 自动加载所有路由模块
-│   │   ├── user/                       # 用户领域 API
-│   │   │   ├── auth.py                 # 登录、注册、JWT
-│   │   │   ├── captcha.py              # 验证码
-│   │   │   └── profile.py              # 个人主页接口（收藏/历史/上传等）
-│   │   ├── video/                      # 视频相关接口
-│   │   │   ├── video.py                # 视频播放、详情页等
-│   │   │   └── upload.py               # 上传接口（本地/云 OSS）
-│   │   ├── comment/                    # 评论系统 API
-│   │   │   └── comment.py              # 评论、回复接口（支持嵌套）
-│   │   ├── interaction/                # 用户交互（点赞、收藏等）
-│   │   │   └── interaction.py
-│   │   └── history/                    # 观看历史接口
-│   │       └── history.py
-
-│   ├── core/                           # 核心配置模块
-│   │   ├── __init__.py                 # 核心配置初始化
-│   │   ├── config.py                   # 应用配置（环境变量、数据库等）
-│   │   ├── db.py                       # 数据库连接配置
-│   │   ├── redis.py                    # Redis连接配置
-│   │   └── security.py                 # 安全相关（JWT、密码等）
-
-│   ├── dependencies/                   # 依赖注入模块
-│   │   ├── __init__.py                 # 依赖注入初始化
-│   │   └── user.py                     # 用户相关依赖（获取当前用户等）
-
-│   ├── models/                         # 数据模型层（SQLAlchemy ORM）
-│   │   ├── __init__.py                 # 聚合导入所有模型
-│   │   ├── base.py                     # Base = declarative_base()
-│   │   ├── user/                       # 用户相关模型
-│   │   ├── video/                      # 视频模块模型
-│   │   ├── comment/                    # 评论模块模型
-│   │   ├── like.py                     # 点赞
-│   │   ├── collection.py               # 收藏模型
-│   │   └── watch_history.py            # 历史记录模型
-
-│   ├── schemas/                        # 请求响应数据结构（DTO）
+├── app/
+│   ├── __init__.py                     # create_app 入口，集中注册路由/依赖/中间件
+│   ├── api/                            # HTTP 控制层，直接映射业务场景
+│   │   ├── user/
+│   │   │   ├── auth.py                 # 登录 / 注册 / JWT 刷新
+│   │   │   ├── captcha.py              # 图形验证码生成与校验
+│   │   │   ├── follow.py               # 关注、取关、粉丝/关注列表
+│   │   │   └── profile.py              # 个人资料、头像、统计信息
+│   │   ├── video/
+│   │   │   ├── video.py                # 首页 feed、推荐、详情、搜索
+│   │   │   └── upload.py               # 视频 + 封面上传，落地本地存储
+│   │   ├── comment/
+│   │   │   └── comment.py              # 评论 / 子评论 CRUD + 点赞数聚合
+│   │   ├── interaction/
+│   │   │   └── interaction.py          # 点赞 / 收藏状态切换与查询
+│   │   ├── history/                    # 观看历史 API 占位（与 analytics 共享模型）
+│   │   └── analytics/
+│   │       └── analytics.py            # 观看历史读取、热门视频、观看日志
+│   ├── core/
 │   │   ├── __init__.py
-│   │   ├── user/                       # 用户登录、注册、Token 响应结构
-│   │   │   ├── auth.py
-│   │   │   └── profile.py
-│   │   ├── video/                      # 视频请求与响应字段结构
-│   │   │   └── video.py
-│   │   ├── comment/                    # 评论 / 回复结构体
-│   │   │   └── comment.py
-│   │   ├── interaction/                # 点赞 / 收藏数据结构
-│   │   │   └── interaction.py
-│   │   └── history/                    # 观看历史请求体 / 响应体
-│   │       └── history.py
-
-│   ├── crud/                           # 数据访问层（Repository 层）
+│   │   └── config.py                   # Pydantic Settings，读取 .env，导出 settings 对象
+│   ├── dependencies/
 │   │   ├── __init__.py
-│   │   ├── user/                       # 用户相关数据操作
-│   │   │   ├── auth.py
-│   │   │   └── user.py
-│   │   ├── video/                      # 视频数据访问
-│   │   │   └── video.py
-│   │   ├── comment/                    # 评论数据增删查改
-│   │   │   └── comment.py
-│   │   ├── interaction/                # 点赞 / 收藏
-│   │   │   ├── like.py
-│   │   │   └── collection.py
-│   │   └── history/                    # 历史记录
-│   │       └── watch_history.py
-
-│   ├── services/                       # 服务层（业务逻辑 / Use Case）
+│   │   └── user.py                     # get_current_user、get_db 等 FastAPI Depends
+│   ├── db/
 │   │   ├── __init__.py
-│   │   ├── video/                      # 视频业务（上传、权限、转码等）
-│   │   │   └── video_service.py
-│   │   ├── comment/                    # 评论业务逻辑
-│   │   │   └── comment_service.py
-│   │   ├── interaction/                # 点赞、收藏等行为逻辑
-│   │   │   └── interaction_service.py
-│   │   ├── history/                    # 历史记录逻辑
-│   │   │   └── history_service.py
-│   │   └── user/                       # 用户聚合服务（主页统计、头像管理等）
-│   │       └── profile_service.py
+│   │   ├── mysql.py                    # AsyncMy + SQLAlchemy engine/session 管理
+│   │   ├── mongodb.py                  # Motor 客户端工厂
+│   │   └── redis.py                    # aioredis 连接池
+│   ├── models/
+│   │   ├── mysql/                      # SQLAlchemy ORM：user/video/comment/like/... 等表
+│   │   ├── mongodb/                    # Mongo 文档模型（评论扩展、用户行为）
+│   │   └── redis/                      # Redis key schema（计数/缓存 namespace）
+│   ├── schemas/
+│   │   ├── response.py                 # 统一响应体（成功/失败包装）
+│   │   ├── video/、user/、comment/…     # Pydantic DTO，和 API / Service 入参出参对应
+│   │   └── interaction/history         # 点赞/收藏/历史记录结构
+│   ├── crud/
+│   │   ├── video.py、user/、comment/…  # Repository 层，封装 DB/Mongo/Redis 查询
+│   │   └── interaction/like.py 等       # 点赞/收藏数据访问
+│   ├── services/
+│   │   ├── video/video.py              # 上传、推荐、详情、互动统计聚合
+│   │   ├── user/follow_service.py      # 关注关系、粉丝统计、互关判断
+│   │   ├── user/profile_service.py     # 用户主页聚合信息
+│   │   ├── interaction/interaction.py  # 点赞/收藏业务逻辑与幂等控制
+│   │   ├── comment/comment.py          # 评论审核、父子评论关联
+│   │   ├── analytics/analytics.py      # 观看历史、热门榜单、观看日志
+│   │   └── history/                    # 占位，复用 analytics 模块的数据
+│   ├── storage/
+│   │   ├── base.py                     # 抽象存储接口（save/delete）
+│   │   ├── local.py                    # 将上传的媒体文件落地到本地磁盘
+│   │   └── aliyun_oss.py               # OSS 适配器（当前示例未启用，可按需接入）
+│   ├── tasks/
+│   │   ├── video_tasks.py              # 视频处理、异步通知的 Celery/APShell 任务
+│   │   └── notify_tasks.py             # 评论提醒、系统消息（占位）
+│   ├── utils/
+│   │   ├── encrypt/                    # 对称/非对称加解密、验证码图片
+│   │   ├── file_validator.py           # 上传文件尺寸/格式校验
+│   │   ├── security.py                 # 密码哈希、JWT 编解码
+│   │   ├── response.py                 # ResponseSchema 工具
+│   │   └── wangyi/email_send.py        # 网易邮箱 SMTP 发信
+│   └── middlewares/
+│       ├── logging.py                  # 请求日志
+│       ├── cors.py                     # CORS 配置
+│       ├── exception.py                # 统一异常处理
+│       ├── trace.py                    # 简单请求 Trace ID
+│       └── anti_scrape.py              # UA/速率初步防护
+│
+├── alembic/
+│   ├── env.py                          # 将 SQLAlchemy metadata 注入迁移环境
+│   ├── script.py.mako                  # 迁移脚本模板
+│   └── versions/                       # 版本脚本（示例：6dcf98062aa1_init.py）
+├── alembic.ini                         # Alembic CLI 配置
+├── docs/                               # 说明文档（架构/配置/规范）
+│   └── v1/
+│       ├── 架构.md
+│       ├── 项目配置.md
+│       ├── 软件说明.md
+│       ├── 需规.md
+│       └── alembic使用流程.md
+├── media/                              # 运行期生成的媒体文件（avatars/covers/videos）
+├── static/                             # 对外静态资源（默认头像、前端静态页等）
+├── SystemScript/                       # 预留系统脚本目录（当前为空，可放 init 脚本）
+├── test/                               # MySQL/Mongo/Redis 连接与示例测试
+├── requirements.txt                    # Python 依赖（FastAPI/SQLAlchemy/Motor/Celery...）
+├── main.py                             # Uvicorn 入口，运行 FastAPI app
+├── run.sh                              # 本地启动脚本：kill port + python main.py
+├── .gitignore                          # Git 忽略配置
+└── .env                                # 运行期环境变量（未纳入版本控制）
 
-│   ├── middlewares/                   # 中间件模块
-│   │   ├── __init__.py
-│   │   ├── logging.py                 # 请求日志中间件
-│   │   ├── cors.py                    # 跨域中间件
-│   │   ├── exception_handler.py       # 全局异常处理
-│   │   ├── trace.py                   # 请求追踪（支持分布式链路追踪）
-│   │   └── anti_scrape.py             # 防爬虫中间件
+---
 
-│   ├── exceptions/                    # 应用级异常定义
-│   │   ├── __init__.py
-│   │   ├── base.py                    # 自定义异常基类
-│   │   ├── user_exceptions.py         # 用户模块异常
-│   │   ├── video_exceptions.py        # 视频模块异常
-│   │   └── common_exceptions.py       # 通用异常（参数错误等）
-
-│   ├── utils/                         # 工具函数（独立于业务逻辑）
-│   │   ├── __init__.py
-│   │   ├── encrypt/                   # 加解密工具
-│   │   │   ├── encrypt.py
-│   │   │   └── image_code.py         # 图像验证码生成
-│   │   ├── mailer/                    # 邮件发送（支持网易邮箱）
-│   │   │   └── email_send.py
-│   │   ├── security.py                # 密码加密、JWT 编解码
-│   │   ├── video_utils.py             # 视频转码、截图等处理工具
-│   │   ├── file_validator.py          # 文件大小、类型合法性校验
-│   │   ├── user_agent.py              # 请求头解析、防爬 UA 检测
-│   │   └── response_wrapper.py        # 接口返回格式统一封装
-
-│   ├── storage/                       # 文件存储抽象层（可插拔后端）
-│   │   ├── __init__.py
-│   │   ├── base.py                    # 定义统一存储接口
-│   │   ├── local.py                   # 本地文件存储实现
-│   │   └── aliyun_oss.py              # 阿里云 OSS 接入（可拓展至 S3）
-
-│   └── tasks/                         # 异步任务模块（Celery / APScheduler）
-│       ├── __init__.py
-│       ├── video_tasks.py             # 视频处理（转码、封面提取等）
-│       └── notify_tasks.py            # 评论提醒、消息推送等
-
-├── media/                             # 本地静态资源根目录（统一存储）
-│   ├── uploads/                       # 用户上传的文件（临时 + 原始）
-│   ├── videos/                        # 转码后的视频文件
-│   ├── covers/                        # 视频封面图、截图
-│   ├── avatars/                       # 用户头像
-│   ├── image/                         # 图片
-│   └── temp/                          # 临时文件处理区（上传中/任务中间态）
-
-├── SystemScript/                      # 系统脚本目录
-│   ├── init_db.py                     # 数据库初始化脚本
-│   └── create_admin.py                # 创建管理员账号脚本
-
-├── main.py                            # 应用入口（创建 FastAPI 实例、挂载中间件路由等）
-
-├── alembic/                           # Alembic 数据库迁移目录
-│   ├── versions/                      # 自动生成的版本脚本
-│   └── env.py                         # Alembic 环境配置（绑定 metadata）
-
-├── .env                               # 项目环境变量配置
-├── alembic.ini                        # Alembic CLI 配置
-└── .gitignore                         # Git 忽略规则
-
+## 业务映射提示
+1. **账号 & 关系链**：`app/api/user/*` + `services/user/` 覆盖登录、资料、关注，直接支撑用户系统。
+2. **媒体上传/点播**：`api/video/`、`services/video/`、`storage/`、`media/` 串起上传、校验、落地与访问地址生成。
+3. **互动闭环**：`api/comment/` 与 `api/interaction/` 结合 `services/comment|interaction`，提供评论和点赞/收藏的状态流转。
+4. **行为采集与分析**：`api/analytics/` + `services/analytics/` 记录观看日志、拉取热门榜单，是云媒体运营指标的来源。
+5. **异步扩展能力**：`tasks/video_tasks.py`、`notify_tasks.py` 为转码、消息推送等耗时操作提供执行位；后续可与 Celery/Redis 对接。
